@@ -1,0 +1,95 @@
+//////////////////////////////////////////////////////////////////////////
+//  
+//  Copyright (c) 2011, John Haddon. All rights reserved.
+//  
+//  Redistribution and use in source and binary forms, with or without
+//  modification, are permitted provided that the following conditions are
+//  met:
+//  
+//      * Redistributions of source code must retain the above
+//        copyright notice, this list of conditions and the following
+//        disclaimer.
+//  
+//      * Redistributions in binary form must reproduce the above
+//        copyright notice, this list of conditions and the following
+//        disclaimer in the documentation and/or other materials provided with
+//        the distribution.
+//  
+//      * Neither the name of John Haddon nor the names of
+//        any other contributors to this software may be used to endorse or
+//        promote products derived from this software without specific prior
+//        written permission.
+//  
+//  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+//  IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+//  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+//  PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+//  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+//  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+//  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+//  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+//  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+//  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+//  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+//  
+//////////////////////////////////////////////////////////////////////////
+
+#include "IECore/ObjectParameter.h"
+
+#include "Gaffer/ObjectParameterHandler.h"
+
+using namespace Gaffer;
+
+ParameterHandler::ParameterHandlerDescription<ObjectParameterHandler, IECore::ObjectParameter> ObjectParameterHandler::g_description;
+
+ObjectParameterHandler::ObjectParameterHandler( IECore::ObjectParameterPtr parameter )
+	:	m_parameter( parameter )
+{
+}
+
+ObjectParameterHandler::~ObjectParameterHandler()
+{
+}
+
+IECore::ParameterPtr ObjectParameterHandler::parameter()
+{
+	return m_parameter;
+}
+
+IECore::ConstParameterPtr ObjectParameterHandler::parameter() const
+{
+	return m_parameter;
+}
+
+Gaffer::PlugPtr ObjectParameterHandler::setupPlug( GraphComponentPtr plugParent, Plug::Direction direction )
+{
+	m_plug = plugParent->getChild<ObjectPlug>( m_parameter->name() );
+	if( !m_plug || m_plug->direction()!=direction )
+	{
+		m_plug = new ObjectPlug( m_parameter->name(), direction, m_parameter->defaultValue() );
+		plugParent->setChild( m_parameter->name(), m_plug );
+	}
+	
+	return m_plug;
+}
+
+Gaffer::PlugPtr ObjectParameterHandler::plug()
+{
+	return m_plug;
+}
+
+Gaffer::ConstPlugPtr ObjectParameterHandler::plug() const
+{
+	return m_plug;
+}
+		
+void ObjectParameterHandler::setParameterValue()
+{
+	m_parameter->setValue( m_plug->getValue()->copy() );
+}
+
+void ObjectParameterHandler::setPlugValue()
+{
+	m_plug->setValue( m_parameter->getValue() );
+}
+
